2024-02-05  Peter Hyman <pete@peterhyman.com>

	* Update gnulib submodule head
	* Update autogen.sh to fetch getopt-gnu package instead
	of getopt
	* Minor manpage update
	* Update configure.ac AC_PREREQ to 2.64 autotools

2020-02-22  Peter Hyman <pete@peterhyman.com>

	* Add submodule git://git.savannah.gnu.org/gnulib
	* Autogen.sh will fetch automatically
	* Add BUILD doc
	* Remove hg tags since we're using git

2019-09-13  Peter Hyman <pete@peterhyman.com>

	* update configure.ac to ignore missing README
	* add m4 and lib files from gnulib for easy compile
	
2019-09-09  Peter Hyman <pete@peterhyman.com>

	* configure.ac: Release 2.11s (for shred)
	* removed references to fedorahosted.org and changed to pagure.io
	* NEWS: Update.
	* README --> README.md
	* Update to include description of -S
	* update tmpwatch.8 for -S parameter.
	* added -S command line option to shred a file before removing it.
	* added FLAG_SHRED definition.
	* added test_for_shred() function to determine if it exists (it
	should!).
	* added shredpath parameter to cleanupDirectory(...) function.
	* added necessary directories and autofoo from v 2.11 to git
	so tmpwatch can compile.

2012-05-26  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 2.11.
	* NEWS: Update.

	* tmpwatch.c (FLAG_ALLFILES): Update comment.
	(socket_kill_time): New variable, taking over FLAG_ALLFILES handling
	for sockets.
	(cleanupDirectory): Use socket_kill_time for sockets, and depend on it
	for FLAG_ALLFILES handling of sockets.
	(main): Move kill_time initialization ...
	(compute_kill_times): ... to this new function.  Set socket_kill_time
	to (time of last boot - grace period) on Linux.
	* tmpwatch.8: Document that unused socketes may be removed, and that
	-a reverts to purely time-based behavior for them.
	* m4/gnulib-cache.m4: Add module clock-time.
	* Makefile.am (tmpwatch_LDADD): Use libraries necessary for
	clock_gettime ().

2012-05-25  Miloslav Trmač  <mitr@redhat.com>
