@@ -1,3 +1,8 @@
+2024-02-11  Peter Hyman <pete@peterhyman.com>
+	* Update check_fuser() so that it properly returns status
+	when a file may be is use. Only applies if the -s | --fuser
+	option is used.
+
 2024-02-05  Peter Hyman <pete@peterhyman.com>
 
 	* Update gnulib submodule head
